--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "crud-api",
   "version": "1.0.0",
-  "description" : "sequelize postgres",
+  "description": "sequelize postgres",
   "main": "app.js",
-  "author" : "",
+  "author": "",
   "license": "MIT",
   "scripts": {
-    "dev" : "nodemon -r dotenv/config app.js"
+    "dev": "nodemon -r dotenv/config app.js",
+    "db:create": "sequelize-cli db:create"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.31.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "sequelize-cli": "^6.6.0"
   }
 }
