--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon -r dotenv/config app.js",
-    "db:create": "sequelize-cli db:create"
+    "db:create": "sequelize-cli db:create",
+    "db:migrate": "sequelize-cli db:migrate",
+    "db:g:migration": "sequelize-cli migration:generate --name",
+    "db:g:seed": "sequelize-cli seed:generate --name",
+    "db:seeds": "sequelize-cli db:seed:all"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
